# lambda-python-datadog

./: .gitignore  LICENSE  Makefile  README.md  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  serverless.yml
.github/workflows/: ci.yml  deploy.yml
app/: handler.py  main.py  powertools.py
app/routes/: health.py  items.py
tests/: conftest.py  test_main.py
