[project]
name = "lambda-python-datadog"
version = "1.0.0"
description = "FastAPI application on AWS Lambda with Datadog observability"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "mangum==0.21.0",
    "pydantic==2.12.5",
    "uvicorn==0.42.0",
    "ddtrace==4.6.0",
    "datadog-lambda==8.123.0",
    "aws-lambda-powertools[tracer]==3.25.0",
]

[tool.uv]
# This is a Lambda application, not a published package.
package = false

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.6.0",
]

